# secret-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: development-plan.md  usage.md
skills/scan-secrets/: SKILL.md
skills/scan-secrets/agents/: openai.yaml
src/secret_guard/: __init__.py  cli.py  findings.py  identify.py  redaction.py  rewrite.py  scan.py
tests/: test_cli.py  test_identify.py  test_redaction.py  test_rewrite.py  test_scan.py
