[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret-guard"
version = "0.1.0"
description = "Utilities for detecting and safely handling exposed secrets."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = []
keywords = ["secret", "scanner", "redaction", "security", "credentials"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.scripts]
secret-guard = "secret_guard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
